invitaion control at front

--- a/front-end/src/app/pages/member-list/member-list.page.html
+++ b/front-end/src/app/pages/member-list/member-list.page.html
@@ -45,7 +45,7 @@
                  <p>Mobile {{m.mobile}}</p> 
 
                  <ion-badge slot="start">End Date:{{m.m_enddate}} </ion-badge>
-                 <!-- <p>unique ID {{m._id}} </p>  -->
+                 <p>unique ID {{m._id}} </p> 
                  <p></p>
 
                  <a [routerLink]="['/member/', m._id]">{{ m._id }}</a>
