--- a/front-end/src/app/pages/member-add/member-add.page.html
+++ b/front-end/src/app/pages/member-add/member-add.page.html
@@ -4,7 +4,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding">
+<ion-content class="ion-padding" style="padding: 7.5%" >
   <form [formGroup]="memberForm" (ngSubmit)="onFormSubmit()">
 
     <!-- <ion-item>
@@ -34,22 +34,25 @@
       <ion-item>
         <ion-label position="floating">Emergency Mobile</ion-label>
         <ion-input 
-        formControlName="Emergency_mobile" 
-        
-        type="text" required>
+        formControlName="Emergency_mobile"         
+        type="text" 
+        required>
         </ion-input>
       </ion-item>
 
       <ion-item>
-        <ion-label position="floating">Aadhar</ion-label>
+        <ion-label position="floating">Aadhar (Optional)</ion-label>
         <ion-input 
-        formControlName="aadhar" 
-        
-         type="text" required>
+            type="text" 
+            formControlName="aadhar" 
+            maxlength="16" 
+            minlength="16"
+            hint="aadhar" 
+           required>
         </ion-input>
       </ion-item>
 
-      <ion-item>
+      <!-- <ion-item>
         <ion-label position="floating">Location LAT</ion-label>
         <ion-input 
         formControlName="m_address_lat" 
@@ -65,10 +68,10 @@
         
         type="text" required>
         </ion-input>
-      </ion-item>
+      </ion-item> -->
 
       <ion-item>
-        <ion-label position="floating">email</ion-label>
+        <ion-label position="floating">E-mail</ion-label>
         <ion-input 
         formControlName="email"  
        
