member action page

--- a/front-end/src/app/pages/member-action/member-action.page.html
+++ b/front-end/src/app/pages/member-action/member-action.page.html
@@ -42,7 +42,7 @@
       <ion-button
       expand="block"
       class="ion-margin"
-      (click)="startScan()"
+      (click)="attendance()"
       >Tap to Scan </ion-button>
     </ion-card-title>
     </ion-card-header>
