action page corrected

--- a/front-end/src/app/pages/gym-add/gym-add.page.html
+++ b/front-end/src/app/pages/gym-add/gym-add.page.html
@@ -32,6 +32,12 @@
       </ion-item>
 
       <ion-item>
+        <ion-label position="floating">Gym Lock ID</ion-label>
+        <ion-input formControlName="gym_lockId"  type="text">
+        </ion-input>
+      </ion-item>
+
+      <ion-item>
           <ion-label>Location on Map</ion-label>
           <ion-button slot="end" (click)="getLocation()">Set </ion-button>
       </ion-item>
