--- a/front-end/src/app/pages/gym-list/gym-list.page.html
+++ b/front-end/src/app/pages/gym-list/gym-list.page.html
@@ -101,5 +101,13 @@
     </ion-fab-button>
   </ion-fab>
 
+  <!-- <swiper-container>
+    <swiper-slide>Slide 1</swiper-slide>
+    <swiper-slide>Slide 2</swiper-slide>
+    <swiper-slide>Slide 3</swiper-slide>
+  </swiper-container> -->
+
+  <!--  swiper error  -->
+
 </ion-content>
 
