--- a/front-end/src/app/pages/member-add/member-add.page.html
+++ b/front-end/src/app/pages/member-add/member-add.page.html
@@ -73,8 +73,8 @@
       <ion-item>
         <ion-label position="floating">E-mail</ion-label>
         <ion-input 
-        formControlName="email"  
-       
+        formControlName="email" 
+        [ngModel]="_textValue" (ngModelChange)="ConvertToLower($event)" 
         type="text" required>
         </ion-input>
       </ion-item>
