--- a/front-end/src/app/home/home.page.html
+++ b/front-end/src/app/home/home.page.html
@@ -43,3 +43,8 @@
     </ion-fab> -->
   
   </ion-content>
+  <ion-footer>
+    <ion-toolbar>
+        <ion-button expand="block" (click)="logout()"><ion-icon name="log-out-outline"></ion-icon>Log Out</ion-button>
+    </ion-toolbar>
+  </ion-footer>
