--- a/front-end/src/app/pages/member-list/member-list.page.html
+++ b/front-end/src/app/pages/member-list/member-list.page.html
@@ -82,7 +82,7 @@
 
               <ion-grid>
                 <ion-row>
-                  <ion-col><ion-button color="primary" expand="block" (click)="updateMemberControl(m._id)"><ion-icon name="create"></ion-icon>Update</ion-button>
+                  <ion-col><ion-button color="primary" expand="block" (click)="updateMemberControl(m._id)"><ion-icon name="create"></ion-icon>Validity</ion-button>
                   </ion-col>
                   <ion-col><ion-button color="primary" expand="block" (click)="updateMember(m._id)"><ion-icon name="documents"></ion-icon>Detail</ion-button>
                   </ion-col>
