--- a/front-end/src/app/pages/membercontrol/date-time-picker/date-time-picker.component.html
+++ b/front-end/src/app/pages/membercontrol/date-time-picker/date-time-picker.component.html
@@ -9,7 +9,62 @@
   [max]="max"
   hourCycle="h24"
   >
+  <ion-buttons slot="buttons">
+    <ion-button (click)="reset()"> Reset </ion-button> 
+    <ion-button (click)=" confirm()">Confirm</ion-button>
+  </ion-buttons> 
 </ion-datetime>
+
+
+<!-- <ion-content> -->
+  <!-- <ion-item (click)="showPicker = !showPicker">
+    <ion-label>Pick date</ion-label> -->
+    <!-- <ion-input
+    value="{{ date | date: 'dd.MM.yyyy' }}"
+    id="date"
+    class="ion-text-end"
+  ></ion-input> -->
+    <!-- <ion-text slot="end">{{formattedString}}</ion-text>
+  </ion-item>
+
+        <ion-datetime *ngif="showPicker"
+        #datetimePick
+        value="dateValue"
+        size="cover"
+        (ionChange)="dateChanged(datetime.value)"
+        showDefaultButtons="true"
+        (ionCancel)="showPicker = false;"
+        ></ion-datetime> -->
+
+        <!-- <ion-item id="open-Modal">
+          <ion-icon icon="calender-outline" slot="start" color="primary"></ion-icon>
+          <ion-label> pick Date</ion-label>
+          <ion-text slot="end">{{formattedString}}</ion-text>
+        </ion-item>
+
+        <ion-modal trigger = "open-modal">
+          <ng-template>
+            <ion-content>
+              <ion-datetime
+              #datetimePick
+              [value]="dateValue"
+              size="cover"
+              (ionChange)="dateChanged(datetime.value)"
+              
+              (ionCancel)="showPicker=false"> 
+                <ion-buttons slot="buttons">
+                    <ion-button (click)="reset()"> Reset </ion-button> 
+                    <ion-button (click)=" confirm()">Confirm</ion-button>
+                </ion-buttons>               
+              </ion-datetime>
+            </ion-content>
+
+          </ng-template>
+
+        </ion-modal>
+  
+  
+</ion-content> -->
 
 <!-- <ion-datetime 
   locale="en-IN"
