--- a/front-end/src/app/pages/membercontrol/membercontrol.page.html
+++ b/front-end/src/app/pages/membercontrol/membercontrol.page.html
@@ -29,7 +29,7 @@
                 <ng-template>        
                       <app-date-time-picker
                       #datetime
-                      [min]="startDateValue"
+                      [min]=""
                       [value]="startDateValue"
                       type="date"
                       [date_format]="format"
