select gym added in member list

--- a/front-end/src/app/pages/gym-list/gym-list.page.html
+++ b/front-end/src/app/pages/gym-list/gym-list.page.html
@@ -8,7 +8,7 @@
 
 <ion-content class="ion-padding">
   <ion-searchbar 
-  placeholder ='Search Member'
+  placeholder ='Search Gym'
   [(ngModel)]="searchTerm"
   showCancelButton="focus"
   animated   
