--- a/front-end/src/app/pages/membertabs/membertabs.page.html
+++ b/front-end/src/app/pages/membertabs/membertabs.page.html
@@ -7,7 +7,7 @@
     </ion-tab-button>
 
     <ion-tab-button tab="memberinfor">
-      <ion-icon name="update"></ion-icon>
+      <ion-icon name="document-text"></ion-icon>
       <ion-label>Report</ion-label>
     </ion-tab-button>
 
@@ -15,6 +15,6 @@
       <ion-icon name="person"></ion-icon>
       <ion-label>Me</ion-label>
     </ion-tab-button>
-    
+
   </ion-tab-bar>
 </ion-tabs>
