--- a/front-end/src/app/pages/member-list/member-list.page.html
+++ b/front-end/src/app/pages/member-list/member-list.page.html
@@ -1,34 +1,24 @@
- <!-- <ion-menu contentId="main-content">
   <ion-header>
     <ion-toolbar>
-      <ion-title> Main Menu </ion-title>
-    </ion-toolbar>
-  </ion-header>
-  <ion-content class="ion-padding">GYM INFO, Reports, Logout</ion-content>
-</ion-menu>  -->
-
-<!-- <div class="ion-page" id="main-content"> -->
-  <ion-header>
-    <ion-toolbar>
-       <!-- <ion-buttons slot="start">
-        <ion-menu-button></ion-menu-button>
-      </ion-buttons>   -->
-
-      <ion-grid>
+       <ion-grid>
         <ion-row>
           <ion-col><ion-title>Members List</ion-title></ion-col>
-          <ion-col><ion-item>
-            <ion-list>
+          <ion-col><ion-item ><ion-label><h2>Selected Gym</h2></ion-label></ion-item></ion-col>
+          <ion-col>            
               <ion-item>
-                <ion-select>
-                <!-- <ion-select-option *ngFor="let mt of MemberType" [value]="mt">{{ mt.name }}</ion-select-option> -->
-                  <ion-select-option default="true" value="Gym1">Gym Name</ion-select-option>
-                  <ion-select-option value="Gym 2">Gym Name 2</ion-select-option>
-                  
+                <ion-select 
+                  aria-label="Gym"
+                  placeholder="Select Gym"
+                  interface="popover"
+                  (ionChange)="selecthandleChange($event)"
+                  [compareWith]="compareWith" value="{{MyDefaultGymValue}}"              
+                  slot="end">
+                  <!-- <ion-select-option *ngFor="let mt of MemberType" [value]="mt">{{ mt.name }}</ion-select-option> -->
+                    <ion-select-option *ngFor="let gym of gyms" value="{{gym._id}}"> {{gym.gym_name | uppercase}}</ion-select-option>
+                    
                 </ion-select>
-              </ion-item>
-            </ion-list>
-          </ion-item></ion-col>
+              </ion-item>         
+           </ion-col>
        </ion-row>
       </ion-grid>     
 
@@ -37,6 +27,7 @@
 
 <ion-content class="ion-padding">
        <ion-searchbar 
+        color="primary"
         placeholder ='Search Member'
         [(ngModel)]="searchTerm"
         showCancelButton="focus"
