--- a/front-end/src/app/pages/member-list/member-list.page.scss
+++ b/front-end/src/app/pages/member-list/member-list.page.scss
@@ -24,3 +24,35 @@ ion-range {
     margin-left: 20px;
     margin-right: 20px;
 } 
+
+ion-select {
+  --placeholder-color: #971e49;
+  --placeholder-opacity: 1;
+  width: 100%;
+  justify-content: center;
+}
+
+ion-select::part(placeholder),
+ion-select::part(text) {
+  flex: 0 0 auto;
+}
+
+ion-select::part(placeholder)::first-letter {
+  font-size: 24px;
+  font-weight: 500;
+}
+
+ion-select::part(text) {
+  color: #545ca7;
+}
+
+ion-select::part(icon) {
+  color: #971e49;
+  opacity: 1;
+}
+
+ion-searchbar {
+  --opacity:10;
+  --border-radius: 10px !important;
+  --border: 2px solid #ffffff;
+}
