--- a/front-end/src/app/pages/member-list/member-list.page.html
+++ b/front-end/src/app/pages/member-list/member-list.page.html
@@ -3,7 +3,8 @@
        <ion-grid>
         <ion-row>
           <ion-col><ion-title>Members List</ion-title></ion-col>
-          <ion-col><ion-item ><ion-label><h2>Selected Gym</h2></ion-label></ion-item></ion-col>
+           
+          <!-- <ion-col><ion-item ><ion-label><h3>Selected Gym</h3></ion-label></ion-item></ion-col> -->
           <ion-col>            
               <ion-item>
                 <ion-select 
@@ -26,8 +27,7 @@
   </ion-header>
 
 <ion-content class="ion-padding">
-       <ion-searchbar 
-        color="primary"
+       <ion-searchbar         
         placeholder ='Search Member'
         [(ngModel)]="searchTerm"
         showCancelButton="focus"
@@ -42,29 +42,49 @@
         <ion-refresher slot="fixed" (ionRefresh)="handleRefresh($event)">
           <ion-refresher-content></ion-refresher-content>
         </ion-refresher>
+
+       
   
       <ion-card class="ion-margin" 
         
       *ngFor="let m of members | filter:searchTerm">
               <ion-card-header appSwipe
-              (swipe)="onSwipe($event)"
-              SWIPE GESTURE>            
+              (swipe)="onSwipe(m._id,$event)"
+              SWIPE GESTURE>
+              <ion-badge>{{m.memberType}}</ion-badge>            
                 <ion-card-title>
                   {{m.m_name}}                   
                 </ion-card-title>
                 <ion-card-subtitle>
-                  <ion-badge>{{m.memberType}}</ion-badge> 
-                  <p (click)="CallTel(m.mobile)"><ion-icon name="call"></ion-icon> Mobile {{m.mobile}}</p>                 
+                  <p (click)="CallTel(m.mobile)"><ion-icon name="call"></ion-icon>{{m.mobile}}</p>                                
                 </ion-card-subtitle>
               </ion-card-header>
             
               <ion-card-content>
                  <!-- <p>Balance Days {{m.m_validdays}} </p> --> 
-                 <div>               
-                 <ion-badge slot="start">Balance :{{m.m_validdays}} Day(s)</ion-badge>              
+                <div>
+                  <ion-grid>
+                    <ion-grid>
+                      <ion-row>
+                        <ion-col color="danger">Balance :{{m.m_validdays}} Day(s)</ion-col>
+                        <ion-col color="danger">End Date:{{m.m_enddate | date }}</ion-col>
+                        <ion-col color="danger">Start Time:{{m.m_intime | date:'shortTime' }}</ion-col>
+                        <ion-col color="danger">Finish Time:{{m.m_outtime | date:'shortTime' }}</ion-col>
+                      </ion-row>
+                    </ion-grid>
+                    <ion-row>
+                      <ion-col>
+                        <ion-badge slot="start"></ion-badge>
+                      </ion-col>
+                      <ion-col>
+                        <ion-badge slot="start"></ion-badge>
+                      </ion-col>
+                    </ion-row>
+                  </ion-grid>               
+                               
                 </div>
                 <div>
-                 <ion-badge slot="start">End Date:{{m.m_enddate | date }}</ion-badge>
+                 
                 </div>
                  <!-- <p>unique ID {{m._id}} </p>  -->
                  <!-- <p>
@@ -81,11 +101,10 @@
 
               <ion-grid>
                 <ion-row>
-                  <ion-col><ion-button color="primary" expand="block" (click)="updateMemberControl(m._id)"><ion-icon name="create"></ion-icon>Validity</ion-button>
+                  <ion-col><ion-button color="primary" shape="round" fill="outline" expand="block" (click)="updateMemberControl(m._id)"><ion-icon name="create"></ion-icon>Validity</ion-button>
                   </ion-col>
-                  <ion-col><ion-button color="primary" expand="block" (click)="updateMember(m._id)"><ion-icon name="documents"></ion-icon>Detail</ion-button>
-                  </ion-col>
-                  <ion-col><ion-button color="primary" expand="block" (click)="inviteMember(m._id)"><ion-icon name="send"></ion-icon>Invite</ion-button></ion-col>
+                  <!-- <ion-col><ion-button color="primary" expand="block" (click)="updateMember(m._id)"><ion-icon name="documents"></ion-icon>Detail</ion-button></ion-col> -->
+                  <!-- <ion-col><ion-button color="primary" expand="block" (click)="inviteMember(m._id)"><ion-icon name="send"></ion-icon>Invite</ion-button></ion-col> -->
                 </ion-row>
               </ion-grid>
               
@@ -145,23 +164,23 @@
     DOUBLE TAP GESTURE
   </ion-button>
 
-  <ion-button
+  <!-- <ion-button
     class="ion-margin" 
     expand="block"
     appPress
     (press)="onPress($event)">
     LONG PRESS GESTURE
-  </ion-button>
+  </ion-button> -->
 
-  <ion-button
+  <!-- <ion-button
     class="ion-margin" 
     expand="block"
     appSwipe
     (swipe)="onSwipe($event)">
     SWIPE GESTURE
-  </ion-button>
+  </ion-button> -->
 
-    <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab color="Secondary" vertical="bottom" horizontal="center" slot="fixed">
       <ion-fab-button (click)="addProduct()" >
         <ion-icon name="add"></ion-icon>
       </ion-fab-button>
@@ -174,5 +193,5 @@
 
   </ion-content>
 
-<!-- </div> -->
+ 
  
