--- a/front-end/src/app/pages/member-list/member-list.page.scss
+++ b/front-end/src/app/pages/member-list/member-list.page.scss
@@ -55,4 +55,54 @@ ion-searchbar {
   --opacity:10;
   --border-radius: 10px !important;
   --border: 2px solid #ffffff;
+  --backgtound:transparent;
+}
+
+.ion-button-01 {
+  --background: #93e9be;
+  --background-hover: #9ce0be;
+  --background-activated: #88f4be;
+  --background-focused: #88f4be;
+
+  --color: blue;
+
+  --border-radius: 0;
+  --border-color: #000;
+  --border-style: solid;
+  --border-width: 1px;
+
+  --box-shadow: 0 2px 6px 0 rgb(0, 0, 0, 0.25);
+
+  --ripple-color: deeppink;
+
+  --padding-top: 10px;
+  --padding-bottom: 10px;
+}
+
+ion-card {
+    --color: #000000;
+  --opacity:10;
+  border-radius:30px !important;
+  border: .1px solid #ffffff;
+  background:transparent;
+}
+
+ion-card-title {
+  --color: #1100ac;
+}
+
+ion-card-subtitle {
+  --color: #2d2ab6;
+}
+
+ion-card-content {
+  padding: top -10pax;
+  >div:nth-of-type(1) {
+    >ion-badge {
+    }
+  }
+  >div:nth-of-type(2) {
+    >ion-badge {
+    }
+  }
 }
