--- a/front-end/src/app/pages/member-list/member-list.page.scss
+++ b/front-end/src/app/pages/member-list/member-list.page.scss
@@ -83,7 +83,7 @@ ion-card {
     --color: #000000;
   --opacity:10;
   border-radius:30px !important;
-  border: .1px solid #ffffff;
+  border: .1px solid #0a0dc7b2;
   background:transparent;
 }
 
